# MayaPhysicsMoveTool

./: .gitignore  CMakeLists.txt  README.md  build.bat  bulletWorld.bullet  maya_launch.py  pybullet_gui_test.py  tempCodeRunnerFile.py
modules/: FindMaya.cmake  FindMaya_Qt.cmake
src/: BulletCollisionHandler.cpp  BulletCollisionHandler.h  BulletOpenGLWidget.cpp  BulletOpenGLWidget.h  CMakeLists.txt  CollisionCandidatesFinder.cpp  CollisionCandidatesFinder.h  CustomMoveManip.h  CustomMoveManipContext.cpp  CustomMoveManipContext.h  DebugDIalog.h  DebugDialog.cpp  MayaIncludes.h  MayaToBulletConverter.cpp  MayaToBulletConverter.h  customMoveManip.cpp  debugDialog.cpp  debugDialog.h  main.cpp
src/CollisionHandlers/: BulletCollisionHandler.cpp  BulletCollisionHandler.h  CollisionCandidatesFinder.h
src/PhysicsContext/: PhysicsManipContext.cpp  PhysicsManipContext.h
src/PhysicsManips/: PhysicsMoveManip.cpp  PhysicsMoveManip.h
test/: collisions_test_scene.mb  collisions_test_scene_no_plane.mb  collisions_test_scene_no_plane_sphere.mb  collisions_test_scene_plane_only.mb  simple_test_scene.mb
